[project]
name = "kb26pkuser4"
version = "0.1.0"
description = ""
authors = [
    {name = "yunaKIM365",email = "uim2878@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (==8.3.5)"
]
