[project]
name = "kb25pkuser34"
version = "0.1.1"
description = ""
authors = [
    {name = "Jongsoo Kim",email = "jongsoo.kim@bionexus.kr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
